language/move-prover/tests/sources/regression/Escape.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:12:5: initialize
    =     at tests/sources/regression/Escape.move:13:29: initialize
    =         account = <redacted>,
    =         owner = <redacted>
    =     at tests/sources/regression/Escape.move:14:25: initialize
    =         <redacted> = <redacted>
    =     at tests/sources/regression/Escape.move:15:9: initialize
    =     at tests/sources/regression/Escape.move:16:9: initialize

error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:24:5: install
    =     at tests/sources/regression/Escape.move:25:9: install
    =         account = <redacted>,
    =         thing = <redacted>

error: post-condition does not hold

    ┌── tests/sources/regression/Escape.move:50:9 ───
    │
 50 │         invariant module forall addr: address where exists<Wrapper<IndoorThing>>(addr): addr == 0x123;
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/regression/Escape.move:19:4: new_outdoor_thing
    =     at tests/sources/regression/Escape.move:20:9: new_outdoor_thing
    =         result = <redacted>
    =     at tests/sources/regression/Escape.move:21:5: new_outdoor_thing
